--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="color-scheme" content="dark light" />
+    <title>Nexus Luma AI Assistant</title>
+    <!-- Optional: add /public/favicon.png if you want a favicon -->
+    <link rel="icon" href="/AIBusinesshelper/favicon.png" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <!-- Vite injects the built assets here -->
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
