🚀 PRODUCTION READY: Clean embed widget with X close, no bugs, smooth operation

--- a/test-embed.html
+++ b/test-embed.html
@@ -8,10 +8,6 @@
   <body style="font-family:system-ui;padding:40px;background:#0f1115;color:#e5e7eb">
     <h1>Nexus Luma — Embed Test</h1>
     <p>If your GitHub Pages site is live, a 💬 button appears bottom-right. Click to open the assistant.</p>
-    <script src="./public/nxl-embed.js"
-      data-host="https://ethorntonnexusluma.github.io/AIBusinesshelper/"
-      data-width="420px"
-      data-height="640px"
-      data-open="false"></script>
+    <script src="./public/nxl-embed.js"></script>
   </body>
 </html>
